details scrollbar fixed

--- a/style.sass
+++ b/style.sass
@@ -367,6 +367,8 @@ header
                 display: inline-block
                 width: 50%
                 vertical-align: top
+                // overflow: auto
+                // max-height: 360px
                 details
                     border: 1px solid $color-light
                     margin-bottom: 1rem
@@ -413,25 +415,27 @@ header
 
 details > summary::after
     position: absolute
-    content: '+'
+    content: '⯆'
     right: 20px
+    color: #cccccc
 
 details[open] > summary::after
     position: absolute
-    content: "-"
+    content: '⯅'
     right: 20px
+    top: 1.5rem
 
 details > summary::-webkit-details-marker
     display: none
 
-::-webkit-scrollbar
+.faq-content::-webkit-scrollbar
     width: 5px
 
-::-webkit-scrollbar-track
+.faq-content::-webkit-scrollbar-track
     box-shadow: inset 0 0 5px #d4d4d4
     border-radius: 10px
 
-::-webkit-scrollbar-thumb
+.faq-content::-webkit-scrollbar-thumb
     background: $secondary-color
 
 // comments
@@ -728,14 +732,23 @@ details > summary::-webkit-details-marker
             cursor: pointer
             @media (max-width: 770px)
                 width: 45%
+                margin-bottom: 3rem
             @media (max-width: 550px)
                 width: 100%
+            .comments-seen
+                font-size: 15px
+                border-top: 1px solid #e5e5e5
+                padding-top: 2rem
+                span
+                    margin-right: 1rem
+                i
+                    color: $secondary-color
             .image-container
                 img
                     width: 100%
                 .date
                     position: absolute
-                    bottom: 12.5rem
+                    bottom: 17.5rem
                     left: -1rem
                     padding: 1.5rem
                     background: $secondary-color
